feat: Use a single script for everything
So that iit is easier to handle