@@ -1,15 +1,50 @@
 #!/bin/sh
 
-# ==========================================================
-# Generic run script for running arbitrary Java applications with 
+# ===================================================================================
+# Generic startup script for running arbitrary Java applications with
 # being optimized for running in containers
+#
+# Usage: ./run-java.sh <args given to Java code>
+#
+# This script will pick up either a 'fat' jar which can be run with "-jar"
+# or you can sepcify a JAVA_MAIN_CLASS.
 #
 # Source and Documentation can be found
 # at https://github.com/fabric8io-images/run-java-sh
 #
+# Env-variables evaluated in this script: 
+#
+# JAVA_OPTIONS: Checked for already set options
+# JAVA_MAX_MEM_RATIO: Ratio use to calculate a default maximum Memory, in percent.
+#                     E.g. the "50" value implies that 50% of the Memory
+#                     given to the container is used as the maximum heap memory with
+#                     '-Xmx'.
+#                     It defaults to "25" when the maximum amount of memory available
+#                     to the container is below 300M, otherwise defaults to "50".
+#                     It is a heuristic and should be better backed up with real
+#                     experiments and measurements.
+#                     For a good overviews what tuning options are available -->
+#                             https://youtu.be/Vt4G-pHXfs4
+#                             https://www.youtube.com/watch?v=w1rZOY5gbvk
+#                             https://vimeo.com/album/4133413/video/181900266
+# Also note that heap is only a small portion of the memory used by a JVM. There are lot
+# of other memory areas (metadata, thread, code cache, ...) which addes to the overall
+# size. When your container gets killed because of an OOM, then you should tune
+# the absolute values.
+# JAVA_INIT_MEM_RATIO: Ratio use to calculate a default intial heap memory, in percent.
+#                      By default this value is not set.
+#
+# The following variables are exposed to your Java application:
+#
+# MAX_MEMORY: The 
+#
+# CONTAINER_MAX_MEMORY: Max memory for the container (if running within a container)
+# MAX_CORE_LIMIT: Number of cores available for the container (if running within a container)
+
+
 # ==========================================================
 
-# Fail on a single failed command in a pipeline (if possible)
+# Fail on a single failed command in a pipeline (if supported)
 (set -o | grep -q pipefail) && set -o pipefail
 
 # Fail on error and undefined vars
@@ -29,8 +64,8 @@ check_error() {
   fi
 }
 
-# The full qualified directory where this script is located
-get_script_dir() {
+# The full qualified directory where this script is located in
+script_dir() {
   # Default is current directory
   local dir=$(dirname "$0")
   local full_dir=$(cd "${dir}" && pwd)
@@ -58,10 +93,11 @@ auto_detect_jar_file() {
 }
 
 # Check directories (arg 2...n) for a jar file (arg 1)
-get_jar_file() {
+find_jar_file() {
   local jar="$1"
   shift;
 
+  # Absolute path check if jar specifies an absolute path
   if [ "${jar}" != ${jar#/} ]; then
     if [ -f "${jar}" ]; then
       echo "${jar}"
@@ -76,6 +112,59 @@ get_jar_file() {
       fi
     done
     echo "ERROR: No ${jar} found in $*"
+  fi
+}
+
+# Generic formula evaluation based on awk
+calc() {
+  local formula="$1"
+  local format="$2"
+  shift 2
+  echo "$@" | awk '
+    function ceil(x) {
+      return x % 1 ? int(x) + 1 : x
+    }
+    function log2(x) {
+      return log(x)/log(2)
+    }
+    function max2(x, y) {
+      return x > y ? x : y
+    }
+    function round(x) {
+      return int(x + 0.5)
+    }
+    {printf "%d\n",'"${formula}"'}
+  '
+}
+
+# Based on the cgroup limits, figure out the max number of core we should utilize
+core_limit() {
+  local cpu_period_file="/sys/fs/cgroup/cpu/cpu.cfs_period_us"
+  local cpu_quota_file="/sys/fs/cgroup/cpu/cpu.cfs_quota_us"
+  if [ -r "${cpu_period_file}" ]; then
+    local cpu_period="$(cat ${cpu_period_file})"
+
+    if [ -r "${cpu_quota_file}" ]; then
+      local cpu_quota="$(cat ${cpu_quota_file})"
+      # cfs_quota_us == -1 --> no restrictions
+      if [ ${cpu_quota:-0} -ne -1 ]; then
+        $(calc 'ceil($1/$2)' "${cpu_quota}" "${cpu_period}")
+      fi
+    fi
+  fi
+}
+
+max_memory() {
+  # High number which is the max limit until which memory is supposed to be
+  # unbounded. 
+  local mem_file="/sys/fs/cgroup/memory/memory.limit_in_bytes"
+  if [ -r "${mem_file}" ]; then
+    local max_mem_cgroup="$(cat ${mem_file})"
+    local max_mem_meminfo="$(cat /proc/meminfo | awk '/MemTotal/ {printf "%d\n", $2 * 1024}')"
+    if [ ${max_mem_cgroup:-0} != -1 ] && [ ${max_mem_cgroup:-0} -lt ${max_mem_meminfo:-0} ]
+    then
+      echo "${max_mem_cgroup}"
+    fi
   fi
 }
 
@@ -99,8 +188,14 @@ load_env() {
   export JAVA_APP_DIR
 
   # Read in container limits and export the as environment variables
-  if [ -f "${script_dir}/container-limits" ]; then
-    . "${script_dir}/container-limits"
+  local core_limit="$(core_limit)"
+  if [ -n "${core_limit}" ]; then
+    export CONTAINER_CORE_LIMIT="${core_limit}"
+  fi
+
+  local mem_limit="$(max_memory)"
+  if [ -n "${mem_limit}" ]; then
+    export CONTAINER_MAX_MEMORY="${mem_limit}"
   fi
 
   # JAVA_LIB_DIR defaults to JAVA_APP_DIR
@@ -111,7 +206,7 @@ load_env() {
   fi
 
   if [ -n "${JAVA_APP_JAR:-}" ]; then
-    local jar="$(get_jar_file ${JAVA_APP_JAR} ${JAVA_APP_DIR} ${JAVA_LIB_DIR})"
+    local jar="$(find_jar_file ${JAVA_APP_JAR} ${JAVA_APP_DIR} ${JAVA_LIB_DIR})"
     check_error "${jar}"
     export JAVA_APP_JAR="${jar}"
   else
@@ -131,21 +226,18 @@ run_java_options() {
   fi
 }
 
-# Combine all java options
-get_java_options() {
-  local dir="$(get_script_dir)"
-  local java_opts
-  local debug_opts
-  if [ -f "$dir/java-default-options" ]; then
-    java_opts="$(. $dir/java-default-options)"
+debug_options() {
+  if [ -n "${JAVA_ENABLE_DEBUG:-}" ] || [ -n "${JAVA_DEBUG_ENABLE:-}" ] ||  [ -n "${JAVA_DEBUG:-}" ]; then
+    local debug_port="${JAVA_DEBUG_PORT:-5005}"
+    local suspend_mode="n"
+    if [ -n "${JAVA_DEBUG_SUSPEND:-}" ]; then
+      echo "${JAVA_DEBUG_SUSPEND}" | grep -q -e '^\(false\|n\|no\|0\)$';
+      if [ $? -eq 1 ]; then
+        suspend_mode="y"
+      fi
+    fi
+    echo "-agentlib:jdwp=transport=dt_socket,server=y,suspend=${suspend_mode},address=${debug_port}"
   fi
-  if [ -f "$dir/debug-options" ]; then
-    debug_opts="$(. $dir/debug-options)"
-  fi
-  # Normalize spaces with awk (i.e. trim and elimate double spaces)
-  # See e.g. https://www.physicsforums.com/threads/awk-1-1-1-file-txt.658865/ for an explanation
-  # of the awk idiom
-  echo "${JAVA_OPTIONS:-} $(run_java_options) ${debug_opts} ${java_opts}" | awk '$1=$1'
 }
 
 # Read in a classpath either from a file with a single line, colon separated
@@ -181,8 +273,169 @@ format_classpath() {
   fi
 }
 
+# ==========================================================================
+
+memory_options() {
+  echo "$(calc_init_memory) $(calc_max_memory)"
+  return
+}
+
+# Check for memory options and set max heap size if needed
+calc_max_memory() { 
+  # Check whether -Xmx is already given in JAVA_OPTIONS
+  if echo "${JAVA_OPTIONS:-}" | grep -q -- "-Xmx"; then
+    return
+  fi
+
+  if [ -z "${CONTAINER_MAX_MEMORY:-}" ]; then
+    return
+  fi
+
+  # Check for the 'real memory size' and calculate Xmx from the ratio
+  if [ -n "${JAVA_MAX_MEM_RATIO:-}" ]; then
+    calc_mem_opt "${CONTAINER_MAX_MEMORY}" "${JAVA_MAX_MEM_RATIO}" "mx"
+  else
+    if [ "${CONTAINER_MAX_MEMORY}" -le 314572800 ]; then
+      # Restore the one-fourth default heap size instead of the one-half below 300MB threshold
+      # See https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/parallel.html#default_heap_size
+      calc_mem_opt "${CONTAINER_MAX_MEMORY}" "25" "mx"
+    else
+      calc_mem_opt "${CONTAINER_MAX_MEMORY}" "50" "mx"
+    fi
+  fi
+}
+
+# Check for memory options and set initial heap size if requested
+calc_init_memory() {
+  # Check whether -Xms is already given in JAVA_OPTIONS.
+  if echo "${JAVA_OPTIONS:-}" | grep -q -- "-Xms"; then
+    return
+  fi
+
+  # Check if value set
+  if [ -z "${JAVA_INIT_MEM_RATIO:-}" ] || [ -z "${CONTAINER_MAX_MEMORY:-}" ]; then
+    return
+  fi
+
+  # Calculate Xms from the ratio given
+  calc_mem_opt "${CONTAINER_MAX_MEMORY}" "${JAVA_INIT_MEM_RATIO}" "ms"
+}
+
+calc_mem_opt() {
+  local max_mem="$1"
+  local fraction="$2"
+  local mem_opt="$3"
+
+  local val=$(calc 'round($1*$2/100/1048576)' "${max_mem}" "${fraction}")
+  echo "-X${mem_opt}${val}m"
+}
+
+c2_disabled() {
+  if [ -n "${CONTAINER_MAX_MEMORY:-}" ]; then
+    # Disable C2 compiler when container memory <=300MB
+    if [ "${CONTAINER_MAX_MEMORY}" -le 314572800 ]; then
+      echo true
+      return
+    fi
+  fi
+  echo false
+}
+
+jit_options() {
+  # Check whether -XX:TieredStopAtLevel is already given in JAVA_OPTIONS
+  if echo "${JAVA_OPTIONS:-}" | grep -q -- "-XX:TieredStopAtLevel"; then
+    return
+  fi
+  if [ $(c2_disabled) = true ]; then
+    echo "-XX:TieredStopAtLevel=1"
+  fi
+}
+
+# Switch on diagnostics except when switched off
+diagnostic_options() {
+  if [ -n "${JAVA_DIAGNOSTICS:-}" ]; then
+    echo "-XX:NativeMemoryTracking=summary -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UnlockDiagnosticVMOptions"
+  fi
+}
+
+# Replicate thread ergonomics for tiered compilation.
+# This could ideally be skipped when tiered compilation is disabled.
+# The algorithm is taken from:
+# OpenJDK / jdk8u / jdk8u / hotspot
+# src/share/vm/runtime/advancedThresholdPolicy.cpp
+ci_compiler_count() {
+  local core_limit="$1"
+  local log_cpu=$(calc 'log2($1)' "$core_limit")
+  local loglog_cpu=$(calc 'log2(max2($1,1))' "$log_cpu")
+  local count=$(calc 'max2($1*$2,1)*3/2' "$log_cpu" "$loglog_cpu")
+  local c1_count=$(calc 'max2($1/3,1)' "$count")
+  local c2_count=$(calc 'max2($1-$2,1)' "$count" "$c1_count")
+  [ $(c2_disabled) = true ] && echo "$c1_count" || echo $(calc '$1+$2' "$c1_count" "$c2_count")
+}
+
+cpu_options() {
+  local core_limit="${JAVA_CORE_LIMIT:-}"
+  if [ "$core_limit" = "0" ]; then
+    return
+  fi
+
+  if [ -n "${CONTAINER_CORE_LIMIT:-}" ]; then
+    if [ -z ${core_limit} ]; then
+      core_limit="${CONTAINER_CORE_LIMIT}"
+    fi
+    echo "-XX:ParallelGCThreads=${core_limit} " \
+         "-XX:ConcGCThreads=${core_limit} " \
+         "-Djava.util.concurrent.ForkJoinPool.common.parallelism=${core_limit} " \
+         "-XX:CICompilerCount=$(ci_compiler_count $core_limit)"
+  fi
+}
+
+#-XX:MinHeapFreeRatio=20  These parameters tell the heap to shrink aggressively and to grow conservatively.
+#-XX:MaxHeapFreeRatio=40  Thereby optimizing the amount of memory available to the operating system.
+heap_ratio() {
+  echo "-XX:MinHeapFreeRatio=20 -XX:MaxHeapFreeRatio=40"
+}
+
+# These parameters are necessary when running parallel GC if you want to use the Min and Max Heap Free ratios.
+# Skip setting gc_options if any other GC is set in JAVA_OPTIONS.
+# -XX:GCTimeRatio=4
+# -XX:AdaptiveSizePolicyWeight=90
+gc_options() {
+    if echo "${JAVA_OPTIONS:-}" | grep -q -- "-XX:.*Use.*GC"; then
+      return
+    fi
+    echo "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -XX:+ExitOnOutOfMemoryError $(heap_ratio)"
+}
+
+java_default_options() {
+  # Echo options, trimming trailing and multiple spaces
+  echo "$(memory_options) $(jit_options) $(diagnostic_options) $(cpu_options) $(gc_options)" | awk '$1=$1'
+}
+
+# ==============================================================================
+
+# Set process name if possible
+exec_args() {
+  EXEC_ARGS=""
+  if [ -n "${JAVA_APP_NAME:-}" ]; then
+    # Not all shells support the 'exec -a newname' syntax..
+    $(exec -a test true 2>/dev/null)
+    if [ $? -eq 0 ]; then
+      echo "-a '${JAVA_APP_NAME}'"
+    fi
+  fi
+}
+
+# Combine all java options
+java_options() {
+  # Normalize spaces with awk (i.e. trim and elimate double spaces)
+  # See e.g. https://www.physicsforums.com/threads/awk-1-1-1-file-txt.658865/ for an explanation
+  # of this awk idiom
+  echo "${JAVA_OPTIONS:-} $(run_java_options) $(debug_options) $(java_default_options)" | awk '$1=$1'
+}
+
 # Fetch classpath from env or from a local "run-classpath" file
-get_classpath() {
+classpath() {
   local cp_path="."
   if [ "${JAVA_LIB_DIR}" != "${JAVA_APP_DIR}" ]; then
     cp_path="${cp_path}:${JAVA_LIB_DIR}"
@@ -205,22 +458,12 @@ get_classpath() {
   echo "${cp_path}"
 }
 
-# Set process name if possible
-get_exec_args() {
-  EXEC_ARGS=""
-  if [ -n "${JAVA_APP_NAME:-}" ]; then
-    # Not all shells support the 'exec -a newname' syntax..
-    $(exec -a test true 2>/dev/null)
-    if [ $? -eq 0 ]; then
-      echo "-a '${JAVA_APP_NAME}'"
-    fi
-  fi
-}
+# ==============================================================================
 
 # Start JVM
 startup() {
   # Initialize environment
-  load_env $(get_script_dir)
+  load_env $(script_dir)
 
   local args
   cd ${JAVA_APP_DIR}
@@ -235,8 +478,8 @@ startup() {
   # Don't put ${args} in quotes, otherwise it would be interpreted as a single arg. 
   # However it could be two args (see above). zsh doesn't like this btw, but zsh is not 
   # supported anyway.
-  echo exec $(get_exec_args) java $(get_java_options) -cp "$(get_classpath)" ${args} $*
-  exec $(get_exec_args) java $(get_java_options) -cp "$(get_classpath)" ${args} $*
+  echo exec $(exec_args) java $(java_options) -cp "$(classpath)" ${args} $*
+  exec $(exec_args) java $(java_options) -cp "$(classpath)" ${args} $*
 }
 
 # =============================================================================
